@@ -1,3 +1,7 @@
+2014-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dvipdfmx.c: Support to make DLL in W32TeX.
+
 2014-11-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dpxfile.c: Check if fqpn == NULL in dpx_open_file(), because
